@@ -264,8 +264,8 @@ html.accesskey {
 
     .navbar-text {
         .badge {
-            max-width: 5em;
-            min-width: 5em;
+            max-width: 7em;
+            min-width: 7em;
             overflow: hidden;
             text-overflow: ellipsis;
         }
